fix content wrapping in dinkuses and the -30-

--- a/v5.0/init/structure.css
+++ b/v5.0/init/structure.css
@@ -176,6 +176,7 @@ div.xxxxxxxx) {
     &::before, &::after,
     & section::before, & section::after {
         box-sizing: border-box;
+        white-space: pre; /* wrap line-feed escapes correctly */
     }
 
     /* … remove dinkuses for the last visible section
